# OTUS_Phone_Book

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: Contacts.json  main.py
src/initial_file_creator/: Contacts.json  main.py  read_save_test.py
